# thunar-custom-actions

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile.in  README.md  configure  configure.ac  messages.po
debian/: changelog  control  copyright  postinst  prerm
include/thunar-custom-actions/: .gitignore
locale/de/LC_MESSAGES/: thunar-custom-actions.po
m4/: .gitignore  tuca.m4  tuca.m4.in
man/man1/: .gitignore  parse-gpg2-k.1.md  uca-apply.1.md  uca-manip.1.md
share/thunar-custom-actions/system-uca/: .gitignore  gpg.xml.m4  images.xml  images.xml.m4  misc.xml.m4  pandoc.xml  pdf.xml.m4
