#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([thunar-custom-actions], [0.0.19], [nobodyinperson@gmx.de])

m4_include([m4/ax_python_module.m4])

# REQUIRE_PROG([variable],[prog],[description])
#
# - search for [prog] with AC_PATH_PROG
# - save found path to [variable]
# - fail if [prog] was not found
# - make [variable] precious with AC_ARG_VAR
# 
AC_DEFUN([REQUIRE_PROG],[
AC_PATH_PROG([$2],[$1])
[test -n "$]$2["] || AC_MSG_ERROR([no $1 ($3) found])
AC_ARG_VAR([$2],[path to $1])
])
AC_ARG_VAR([PASSWDFILE],[path to passwd file [SYSCONFDIR/passwd]]) 
AC_SUBST([PASSWDFILE])
AC_ARG_VAR([UCAFILE],[relative path from homedir to Thunar uca.xml file
[.config/Thunar/uca.xml]]) 
AC_SUBST([UCAFILE])

# # Checks for programs.
REQUIRE_PROG([make],[make_bin],[program])
REQUIRE_PROG([xdg-open],[xdg_open_bin],[program])
REQUIRE_PROG([convert],[convert_bin],[imagemagick])
REQUIRE_PROG([su],[su_bin],[program])
REQUIRE_PROG([xargs],[xargs_bin],[program])
REQUIRE_PROG([find],[find_bin],[program])
REQUIRE_PROG([perl],[perl_bin],[program])
REQUIRE_PROG([gpg2],[gpg2_bin],[gnupg])
REQUIRE_PROG([zenity],[zenity_bin],[program])
REQUIRE_PROG([bc],[bc_bin],[program])
REQUIRE_PROG([gs],[gs_bin],[ghostscript])
REQUIRE_PROG([m4],[m4_bin],[m4sugar])
REQUIRE_PROG([pandoc],[pandoc_bin],[program])
REQUIRE_PROG([python3],[python3_bin],[program])
REQUIRE_PROG([gettext],[gettext_bin],[localisation program])
REQUIRE_PROG([gettext.sh],[gettextsh_bin],[gettext for shell])
REQUIRE_PROG([xgettext],[xgettext_bin],[program])
REQUIRE_PROG([msgfmt],[msgfmt_bin],[program])
REQUIRE_PROG([msgmerge],[msgmerge_bin],[program])
REQUIRE_PROG([md5sum],[md5sum_bin],[program])
REQUIRE_PROG([sha1sum],[sha1sum_bin],[program])
REQUIRE_PROG([sha256sum],[sha256sum_bin],[program])
REQUIRE_PROG([pinentry-gtk-2],[pinentry_gtk_2_bin],[graphical password dialog])
REQUIRE_PROG([gpg-agent],[gpg_agent_bin],[gnupg agent])
REQUIRE_PROG([gpg-connect-agent],[gpg_connect_agent_bin],[gnupg agent control])

# Check for Python modules
AX_PYTHON_MODULE(lxml,fatal,python3)

# create Makefile input with all output variables from here
makefile_include=configure_vars.mk
makefile_include_local=include/$PACKAGE_NAME/${makefile_include}
mkdir -p $(dirname ${makefile_include}.in)
echo '# generated by autoconf' > ${makefile_include_local}.in # empty file
AC_SUBST([makefile_include])
configure_vars=$(echo "$ac_subst_vars" | uniq | perl -pe 's#\s+# #g')
for var in $configure_vars;do
    # set the variables in RECURSIVELY EXPANDING mode
    echo "$var=@$var@" >> ${makefile_include_local}.in
done
for var in $configure_vars;do
    # set the variables in SIMPLE EXPANDING mode
    echo "$var:=@$var@" >> ${makefile_include_local}.in
done
AC_SUBST([configure_vars])

AC_CONFIG_FILES([${makefile_include_local} Makefile])
AC_OUTPUT
